--- a/3_scripts_for_figures/fig6_spearman_correlation.ipynb
+++ b/3_scripts_for_figures/fig6_spearman_correlation.ipynb
@@ -69,7 +69,7 @@
     "    del df_train\n",
     "    gc.collect()\n",
     "    \n",
-    "    df_train = pd.read_parquet('../data/c_r_'+t+'_train.gzip')\n",
+    "    df_train = pd.read_parquet('../data/'+t+'_train.gzip')\n",
     "    corr = df_train[var].corr(method='spearman')\n",
     "    col_tmp[\"A\"] = corr[[\"PM25\"]].rename(columns={\"PM25\":\"A\"})[1:]\n",
     "    del df_train\n",
